# svg.path

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  CONTRIBUTORS.txt  MANIFEST.in  Makefile  README.md  README.rst  path.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: integration.yml  test.yml
src/svg/path/: __init__.py  arc_with_bezier_transform.py  arc_with_bezier_transformv1.py  parser.py  path.c  path.py  svgparser.py
src/svg/path/tests/: test_boundingbox_image.py  test_doc.py  test_generation.py  test_image.py  test_parsing.py  test_paths.py  test_tokenizer.py
tests/: arc_skews_png.py  font.py  test_boundingbox_image.py  test_doc.py  test_generation.py  test_image.py  test_parsing.py  test_paths.py  test_tokenizer.py  test_transforms.py  utils.py
