[metadata]
name = svg.path
version = 6.2.dev0
description = SVG path objects and parser
long_description = file: README.rst, CONTRIBUTORS.txt, CHANGES.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics
keywords = svg, path, maths
author = Lennart Regebro
author_email = regebro@gmail.com
url = https://github.com/regebro/svg.path
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = src
test_suite = svg.path.tests

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    Pillow

[flake8]
max-line-length=120

[bdist_wheel]
universal=1

[tool:pytest]
testpaths =
    src/svg/path/tests
